# Utils4GL

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
CPP_Algo/: CMakeLists.txt  main.cpp
OpenGL/: CMakeLists.txt  demo_modern.cpp  gl_utils.cpp  gl_utils.hpp  main.cpp  simple_shaders.glsl
archive/: CMakeLists.txt
cmake_src/: copy_shaders.cmake
dataIO/: data_io.cpp  data_io.hpp
example/: CMakeLists.txt  gl_legacy_demo.cpp  gl_modern_demo.cpp  gl_triangle.cpp  main.cpp
learnModernC++/: CMakeLists.txt
modern_c++/: CMakeLists.txt  basic_concepts.cpp
shaders/: basic_shader.frag  basic_shader.vert  light_shader.frag  light_shader.vert  simple_shader.frag  simple_shader.vert  simple_shaders.glsl
src/: CMakeLists.txt  camera.hpp  game_object.hpp  gl_utils.cpp  gl_utils.hpp  global_alias.h  main.cpp  quaternion.h  shader.cpp  shader.hpp
